--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <header class="container">
+    <!-- Main navbar -->
     <nav class="menu">
       <a href="#"><img class="logo" src="images/microsofot_logo.png" alt="Microsoft Logo"></a>
       <ul class="left-menu">
@@ -31,7 +32,13 @@
         <li><a href="#"><i class="fa-solid fa-cart-plus"></i></a></li>
         <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
       </ul>
-    </nav> <!-- end of main-menu -->
+    </nav>
+    <!-- Banner -->
+    <div class="banner">
+      <a href="#">Spring Sale-save on slecect game, PCs, Suface, and more. Sales ends 4/21. Shop now</a><i
+        class="fa-solid fa-chevron-right"></i>
+    </div>
+
   </header>
 </body>
 
