--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -39,6 +39,19 @@
         class="fa-solid fa-chevron-right"></i>
     </div>
 
+    <!-- Slideshow -->
+    <div class="slideshow">
+      <img src="images/laptops.webp" alt="Laptops image">
+      <div class="promo-text">
+        <p class="badge">Spring Sale</p>
+        <h3>Save on Surface</h3>
+        <p class="text">Don't miss your chance to score incredible deals on select Surface devices. If you have
+          questions before you
+          buy, chatwith a product expert.</p>
+        <a href="#" class="btn-primary">Show now<i class="fa-solid fa-chevron-right"></i></a>
+        <a href="#" class="btn-secondary">Book an appointment<i class="fa-solid fa-chevron-right"></i></a>
+      </div>
+    </div>
   </header>
 </body>
 
