--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -53,6 +53,44 @@
       </div>
     </div>
   </header>
+  <!-- Products -->
+  <section class="products">
+    <div>
+      <img src="images/windows.png" alt="Windows icon">
+      <a href="#">Choice your Microsoft 365</a>
+    </div>
+    <div>
+      <img src="images/laptop.jpg" alt="Windows icon">
+      <a href="#">Shop surface devices</a>
+    </div>
+    <div>
+      <img src="images/xbox.webp" alt="Windows icon">
+      <a href="#">Xbox and PC gaming</a>
+    </div>
+    <div>
+      <img src="images/windows.png" alt="Windows icon">
+      <a href="#">Get windows 11</a>
+    </div>
+    <div>
+      <img src="images/labtop.webp" alt="Windows icon">
+      <a href="#">Find your next PC</a>
+    </div>
+    <div>
+      <img src="images/swiftcase.webp" alt="Windows icon">
+      <a href="#">Shop business</a>
+    </div>
+  </section>
+
+  <!-- Cards -->
+  <section class="cards">
+    <div class="card">
+      <img src="" alt="">
+      <h3>Xbox Series S</h3>
+      <p>Score an Xbox Series S now and enjoy add-on content, featuring the Midnight Drive Pack, 1,000 V-Bucks, and
+        1,000 Rocket League credits.</p>
+      <a href="#">Shop Xbox Series S</a>
+    </div>
+  </section>
 </body>
 
 </html>
