--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -82,13 +82,35 @@
   </section>
 
   <!-- Cards -->
-  <section class="cards">
+  <section class="cards container">
     <div class="card">
-      <img src="" alt="">
+      <img src="images/xobox-card.jpg" alt="">
       <h3>Xbox Series S</h3>
       <p>Score an Xbox Series S now and enjoy add-on content, featuring the Midnight Drive Pack, 1,000 V-Bucks, and
         1,000 Rocket League credits.</p>
-      <a href="#">Shop Xbox Series S</a>
+      <a href="#">Shop Xbox Series S<i class="fa-solid fa-chevron-right"></i></a>
+    </div>
+    <div class="card">
+      <img src="images/card-headphone.webp" alt="">
+      <h3>Never miss a beat</h3>
+      <p>Discover the latest autio from Surface, featuring ultra-comfortable design, immersive sound, and all-day
+        battery.</p>
+      <a href="#">Shop Surface Earbuds<i class="fa-solid fa-chevron-right"></i></a>
+      <a href="#">Shop Surface Headphone 2<i class="fa-solid fa-chevron-right"></i></a>
+    </div>
+    <div class="card">
+      <img src="images/card-ms365.webp" alt="">
+      <h3>Never miss a beat</h3>
+      <p>Discover the latest autio from Surface, featuring ultra-comfortable design, immersive sound, and all-day
+        battery.</p>
+      <a href="#">For up to 6 people<i class="fa-solid fa-chevron-right"></i></a>
+      <a href="#">For 1 person<i class="fa-solid fa-chevron-right"></i></a>
+    </div>
+    <div class="card">
+      <img src="images/card-labtop.webp" alt="">
+      <h3>Save up to $500 on Windows PCs</h3>
+      <p>New season, new deals on select laptops, desktops, and 2-in-1s for work and play.</p>
+      <a href="#">Shop now<i class="fa-solid fa-chevron-right"></i></a>
     </div>
   </section>
 </body>
