Game promotion section

--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -113,6 +113,17 @@
       <a href="#">Shop now<i class="fa-solid fa-chevron-right"></i></a>
     </div>
   </section>
+  <!-- Game promotion -->
+  <section class="game container">
+    <div>
+      <h2>PC Game Pass</h2>
+      <p>Unlock 100+ great games and EA Play, plus get your first month for $1. Offer available to new subscribers only.
+      </p>
+      <a href="#" class="btn-primary">Join now<i class="fa-solid fa-chevron-right"></i></a>
+      <a href="#" class="btn-secondary">Compare all plans<i class="fa-solid fa-chevron-right"></i></a>
+    </div>
+    <img src="images/game.jpg" alt="">
+  </section>
 </body>
 
 </html>
