--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -124,6 +124,39 @@
     </div>
     <img src="images/game.jpg" alt="">
   </section>
+  <!-- For Business -->
+  <section class="business container">
+    <h2>For Business</h2>
+    <div class="cards">
+      <div class="card">
+        <img src="images/girl.webp" alt="">
+        <h3>Welcome to your Windows 365 Cloud PC</h3>
+        <p>Securely stream your Windows experience from the Microsoft cloud to any device.</p>
+        <a href="#">Get it today</a>
+      </div>
+      <div class="card">
+        <img src="images/meet.webp" alt="">
+        <h3>Get Microsoft Teams for free</h3>
+        <p>Get online meetings, chat, and shared cloud storage - all in one place with the free version of Microsoft
+          Teams</p>
+        <a href="#">Get it today</a>
+      </div>
+      <div class="card">
+        <img src="images/computer.webp" alt="">
+        <h3>Surface Pro 8 for Business Essentials Bundle</h3>
+        <p>Enhance productivity with Surface Pro 8 (optional LTE connectivity), Surface Pro Signature Keyboard, and
+          Microsoft Complete Protection Plan. Questions? Book an online consultation.</p>
+        <a href="#">Get it today</a>
+      </div>
+      <div class="card">
+        <img src="images/cloud.webp" alt="">
+        <h3>Thrive in a hybrid world</h3>
+        <p>Discover tools, resources, and strategies to help your employees succeed in the new world of flexible work.
+        </p>
+        <a href="#">Get it today</a>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
