--- a/Microsoft/index.html
+++ b/Microsoft/index.html
@@ -157,6 +157,17 @@
       </div>
     </div>
   </section>
+  <!--  -->
+  <section class="carbon container">
+    <div class="content">
+      <h3>Microsoft 2021 Sustainability Report</h3>
+      <p>As we work toward our commitment to a net-zero future, we strive to remain transparent on out progress and
+        share
+        our learnings along the way.</p>
+      <a class="btn-primary" href="#">Read the blog<i class="fa-solid fa-chevron-right"></i></a>
+      <a class="btn-secondary" href="#">Read the report<i class="fa-solid fa-chevron-right"></i></a>
+    </div>
+  </section>
 </body>
 
 </html>
